--- a/admin.html
+++ b/admin.html
@@ -3,9 +3,142 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Admin Ana Sayfa</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-    <h3>Admin rolü giriş yaptı</h3>
+<body class="bg-light">
+    <header>
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="#" onclick="loadPage('admin')">Admin Page</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" onclick="loadPage('car')">Araç Yönetimi</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" onclick="loadPage('logout')">Çıkış</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <div class="card">
+                    <div class="card-header bg-primary text-white">
+                        <h3 class="mb-0">Araç Listesi</h3>
+                    </div>
+                    <div class="card-body">
+                        <button class="btn btn-success mb-3" data-bs-toggle="modal" data-bs-target="#addCarModal">Yeni Araç Ekle</button>
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>Kategori</th>
+                                    <th>Marka</th>
+                                    <th>Model</th>
+                                    <th>Yıl</th>
+                                    <th>Vites</th>
+                                    <th>Yakıt</th>
+                                    <th>Günlük Ücret</th>
+                                    <th>Stok</th>
+                                    <th>Durum</th>
+                                </tr>
+                            </thead>
+                            <tbody id="carTableBody">
+                                <!--Araçlar buraya dinamik olarak eklenecek-->
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--Add Car Modal-->
+    <div class="modal fade" id="addCarModal" tabindex="-1" aria-labelledby="addCarModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="addCarModalLabel">Yeni Araç Ekle</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Kapat"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="carForm" enctype="multipart/form-data">
+                        <div class="mb-3">
+                            <label for="carCategory" class="form-label">Kategori</label>
+                            <!--Buraya dropdown gelecek-->
+                            <select type="text" id="carCategory" class="form-control" onchange="onCategoryChange()" name="category">Kategori Seçiniz</select>
+                        </div>
+                        <div class="mb-3">
+                            <label for="carBrand" class="form-label">Marka</label>
+                            <input type="text" class="form-control" id="carBrand" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="carModel" class="form-label">Model</label>
+                            <input type="text" class="form-control" id="carModel" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="carColor" class="form-label">Renk</label>
+                            <input type="text" class="form-control" id="carColor" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="carYear" class="form-label">Yıl</label>
+                            <input type="number" class="form-control" id="carYear" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="carTransmission" class="form-label">Vites</label>
+                            <select type="text" id="carTransmission" class="form-control" name="carTransmission">
+                                <option value="">Vites Tipi Seçiniz</option>
+                                <option value="AUTOMATIC">Otomatik</option>
+                                <option value="MANUAL">Düz</option>
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <label for="carFuel" class="form-label">Yakıt Tipi</label>
+                            <select type="text" id="carFuel" class="form-control" name="carTransmission">
+                                <option value="">Yakıt Tipi Seçiniz</option>
+                                <option value="GASOLINE">Benzin</option>
+                                <option value="DIESEL">Dizel</option>
+                                <option value="ELECTRIC">Elektrik</option>
+                                <option value="HYBRID">Hibrit</option>
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <label for="carPrice" class="form-label">Günlük Ücret</label>
+                            <input type="number" class="form-control" id="carPrice" required>
+                        </div>
+                        <button type="button" class="btn btn-primary" id="addCarBtn" onclick="addCar()">Araç Ekle</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer class="bg-dark text-light text-center p-3 mt-5 fixed-bottom">
+        &copy; 2024 Rent a Car Uygulaması
+        Tüm hakkı saklıdır.
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script>
+        function loadPage(page) {
+            if(page==='category'){
+                window.location.href='category.html';
+            } else if(page === 'logout'){
+                window.location.href='login.html';
+            } else{
+                document.getElementById('pageContent').innerHTML='<h1>Admin Sayfasına Hoşgeldiniz</h1>';
+            }
+        }
+    </script>
+    <script src="admin.js"></script>
 </body>
 </html>
