--- a/register.html
+++ b/register.html
@@ -23,7 +23,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="lastName" class="form-label">Soyad</label>
-                        <input type="text" class="form-control" id="surname" name="surname" required>
+                        <input type="text" class="form-control" id="lastName" name="lastName" required>
                     </div>
                     <div class="mb-3">
                         <label for="nationalityNumber" class="form-label">TC Kimlik Numarası</label>
@@ -39,18 +39,18 @@
                     </div>
                     <div class="mb-3">
                         <label for="city" class="form-label">Şehir</label>
-                        <select type="text" id="city" class="form-control" name="city"></select>
+                        <select type="text" id="city" class="form-control" onchange="onCityChange()" name="city" required></select>
                     </div>
                     <div class="mb-3">
                         <label for="district" class="form-label">İlçe</label>
-                        <input type="text" class="form-control" id="district" name="district" required>
+                        <select type="text" id="district" class="form-control" onchange="onCityChange()" name="district" required></select>
                     </div>
                     <div class="mb-3">
                         <label for="addressLine" class="form-label">Adres</label>
                         <textarea rows="5" cols="33" class="form-control" id="addressLine" name="addressLine" required> </textarea>
                     </div>
                     <div class="mb-3">
-                        <button type="button" class="btn btn-primary" onclick="register()"> Üye Ol </button>
+                        <button type="button" class="btn btn-primary" onclick="addUser()"> Üye Ol </button>
                     </div>
                 </form>
             </div>
