Add UserList and Home Page

--- a/addCar.html
+++ b/addCar.html
@@ -36,6 +36,7 @@
                         <ul class="dropdown-menu">
                           <li><a class="dropdown-item" href="#">Aktif Kiralamalar</a></li>
                           <li><a class="dropdown-item" href="#">Geçmiş Kiralamalar</a></li>
+                          <li><a class="dropdown-item" href="user.html">Kullanıcılar</a></li>
                         </ul>
                     </li>
                     
