--- a/addCategory.html
+++ b/addCategory.html
@@ -36,9 +36,9 @@
                         <ul class="dropdown-menu">
                           <li><a class="dropdown-item" href="#">Aktif Kiralamalar</a></li>
                           <li><a class="dropdown-item" href="#">Geçmiş Kiralamalar</a></li>
+                          <li><a class="dropdown-item" href="user.html">Kullanıcılar</a></li>
                         </ul>
                     </li>
-                    
                     <li class="nav-item">
                         <a class="nav-link" href="#" onclick="loadPage('logout')">Çıkış</a>
                     </li>
@@ -65,8 +65,7 @@
             <thead>
                 <tr>
                     <th>ID</th>
-                    <th>Name</th>
-                    <th>Actions</th>
+                    <th>Kategori Adı</th>
                 </tr>
             </thead>
             <tbody>
