--- a/register.html
+++ b/register.html
@@ -43,7 +43,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="district" class="form-label">İlçe</label>
-                        <select type="text" id="district" class="form-control" onchange="onCityChange()" name="district" required></select>
+                        <select type="text" id="district" class="form-control"  name="district" required></select>
                     </div>
                     <div class="mb-3">
                         <label for="addressLine" class="form-label">Adres</label>
