--- a/addCar.html
+++ b/addCar.html
@@ -27,7 +27,7 @@
                         <ul class="dropdown-menu">
                           <li><a class="dropdown-item" href="addCar.html">Araç Ekleme</a></li>
                           <li><a class="dropdown-item" href="addCategory.html">Kategori Ekle</a></li>
-                          <li><a class="dropdown-item" href="addCategory.html">Araç Envanteri</a></li>
+                          <li><a class="dropdown-item" href="carInventory.html">Araç Envanteri</a></li>
                         </ul>
                       </li>
                     <li class="nav-item dropdown">
@@ -59,7 +59,6 @@
                         <th>Kategori</th>
                         <th>Marka</th>
                         <th>Model</th>
-                        <th>Renk</th>
                         <th>Yıl</th>
                         <th>Vites</th>
                         <th>Yakıt</th>
@@ -98,10 +97,6 @@
                         <div class="mb-3">
                             <label for="carModel" class="form-label">Model</label>
                             <input type="text" class="form-control" id="carModel" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="carColor" class="form-label">Renk</label>
-                            <input type="text" class="form-control" id="carColor" required>
                         </div>
                         <div class="mb-3">
                             <label for="carYear" class="form-label">Yıl</label>
@@ -158,10 +153,6 @@
                         <div class="mb-3">
                             <label for="carModel" class="form-label">Model</label>
                             <input type="text" class="form-control" id="editCarModel" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="carColor" class="form-label">Renk</label>
-                            <input type="text" class="form-control" id="editCarColor" required>
                         </div>
                         <div class="mb-3">
                             <label for="carYear" class="form-label">Yıl</label>
