--- a/admin.html
+++ b/admin.html
@@ -26,6 +26,7 @@
                         <ul class="dropdown-menu">
                           <li><a class="dropdown-item" href="addCar.html">Araç Ekleme</a></li>
                           <li><a class="dropdown-item" href="addCategory.html">Kategori Ekle</a></li>
+                          <li><a class="dropdown-item" href="carInventory.html">Araç Envanteri</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
